--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.16",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-slideshow-image": "^4.2.1",
     "react-social-icons": "^5.15.0",
