--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^37.1.0",
+    "@ckeditor/ckeditor5-react": "^6.0.0",
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
@@ -16,6 +18,7 @@
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-slideshow-image": "^4.2.1",
     "react-social-icons": "^5.15.0",
     "tailwind-scrollbar-hide": "^1.1.7",
@@ -26,6 +29,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.2.7"
   }
 }
