--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
+    "formidable": "^2.1.1",
+    "knex": "^2.4.2",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "next": "13.2.4",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
