--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
+    "dotenv": "^16.0.3",
     "formidable": "^2.1.1",
     "knex": "^2.4.2",
     "moment": "^2.29.4",
