--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-slideshow-image": "^4.2.1",
