--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
+    "html-to-text": "^9.0.5",
     "next": "13.2.4",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
