--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "formidable": "^2.1.1",
     "html-react-parser": "^4.0.0",
+    "html-to-text": "^9.0.5",
     "knex": "^2.4.2",
     "localStorage": "^1.0.4",
     "moment": "^2.29.4",
