--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
     "formidable": "^2.1.1",
     "html-react-parser": "^4.0.0",
     "html-to-text": "^9.0.5",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.4.2",
     "localStorage": "^1.0.4",
     "moment": "^2.29.4",
