--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^2.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "formidable": "^2.1.1",
     "html-react-parser": "^4.0.0",
