--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^37.1.0",
@@ -14,9 +13,12 @@
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.16",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cookies-next": "^2.1.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "formidable": "^2.1.1",
