--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "formidable": "^2.1.1",
     "html-react-parser": "^4.0.0",
     "html-to-text": "^9.0.5",
@@ -28,6 +29,7 @@
     "knex": "^2.4.2",
     "localStorage": "^1.0.4",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "next": "13.2.4",
     "nodemailer": "^6.9.3",
@@ -42,6 +44,7 @@
     "react-slideshow-image": "^4.2.1",
     "react-social-icons": "^5.15.0",
     "redux": "^4.2.1",
+    "sharp": "^0.32.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
   },
