--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "next": "13.2.4",
-    "next-images": "^1.8.5",
     "nodemailer": "^6.9.3",
     "quill": "^1.3.7",
     "react": "18.2.0",
@@ -45,11 +44,15 @@
     "react-slideshow-image": "^4.2.1",
     "react-social-icons": "^5.15.0",
     "redux": "^4.2.1",
+    "sharp": "^0.32.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "file-loader": "^6.2.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "next-images": "^1.8.5",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
