--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "flag-icons": "^6.7.0",
     "formidable": "^2.1.1",
     "html-react-parser": "^4.0.0",
     "html-to-text": "^9.0.5",
