--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^8.0.5",
     "react-slideshow-image": "^4.2.1",
     "react-social-icons": "^5.15.0",
+    "react-time-picker": "^6.2.0",
     "redux": "^4.2.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
